; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_libata-core.c_async_port_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_libata-core.c_async_port_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_port = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@ATA_HOST_PARALLEL_SCAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @async_port_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @async_port_probe(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ata_port*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ata_port*
  store %struct.ata_port* %7, %struct.ata_port** %5, align 8
  %8 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %9 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @ATA_HOST_PARALLEL_SCAN, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %24, label %16

16:                                               ; preds = %2
  %17 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %18 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @async_synchronize_cookie(i32 %22)
  br label %24

24:                                               ; preds = %21, %16, %2
  %25 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %26 = call i32 @ata_port_probe(%struct.ata_port* %25)
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @async_synchronize_cookie(i32 %27)
  %29 = load %struct.ata_port*, %struct.ata_port** %5, align 8
  %30 = call i32 @ata_scsi_scan_host(%struct.ata_port* %29, i32 1)
  ret void
}

declare dso_local i32 @async_synchronize_cookie(i32) #1

declare dso_local i32 @ata_port_probe(%struct.ata_port*) #1

declare dso_local i32 @ata_scsi_scan_host(%struct.ata_port*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
